--- a/FinalProject_OOD_2022/Login.xaml
+++ b/FinalProject_OOD_2022/Login.xaml
@@ -10,14 +10,16 @@
         <Border Background="White" CornerRadius="5" Margin="10">
             <StackPanel
             Margin="20">
-                <Label Content="HMS - Henrysolutions" 
+                <Label Content="HenrySolutions" 
                Foreground="#0C325B" 
                FontSize="25"
                HorizontalAlignment="Center"/>
+                
                 <Separator></Separator>
                 <Label Content="Username" 
                        Foreground="#0C325B"
                        FontSize="18"/>
+                
                 <TextBox x:Name="txtUsername" 
                            Background="white" 
                            Foreground="Black" 
@@ -34,7 +36,7 @@
                 <Button x:Name="btnSubmit"  Content="Login" Background="Gray" 
                            Foreground="Black" 
                            Margin="70 10"
-                           FontSize="18" Width="100"/>
+                           FontSize="18" Width="100" Click="btnSubmit_Click"/>
             </StackPanel>
         </Border>
 
