--- a/FinalProject_OOD_2022/Home.xaml
+++ b/FinalProject_OOD_2022/Home.xaml
@@ -5,8 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProject_OOD_2022"
         mc:Ignorable="d"
-        Title="Home" Height="431" Width="577">
-    <Grid>
-        
+        Title="Home" Height="506" Width="1016"
+        WindowStartupLocation="CenterOwner"
+         Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        >
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0"  Margin="20 20">
+                <Button Margin="0 10" Height="40" Click="Button_Click_1">Appointment</Button>
+                <Button Margin="0 10" Height="40">Patient</Button>
+                <Button Margin="0 10" Height="40">Billing</Button>
+                <Button Margin="0 10" Height="40">Full History of the Patient</Button>
+                <Button Margin="0 10" Height="40">View Appointment</Button>
+                <Button Margin="0 20" Height="20" Width="50" Background="#FFF78F8F" Click="Button_Click">Exit</Button>
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <Image  Source="images/pets.png" Height="410" Width="780"/>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
