--- a/FinalProject_OOD_2022/Home.xaml
+++ b/FinalProject_OOD_2022/Home.xaml
@@ -12,6 +12,8 @@
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
       Loaded="Window_Loaded"
         >
+
+
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -24,8 +26,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0"  Margin="20 20">
-                <Button Margin="0 10" Height="40">Appointment</Button>
-                
+                <Button Margin="0 10" Height="40" Click="Appointment_Btn">Appointment</Button>
                 <Button Margin="0 10" Height="40">Patient</Button>
                 <Button Margin="0 10" Height="40">Billing</Button>
                 <Button Margin="0 10" Height="40">Full History of the Patient</Button>
@@ -33,16 +34,45 @@
                 <Button Margin="0 20" Height="29" Width="76" Background="#FFF78F8F"  Click="Button_Click">Exit</Button>
             </StackPanel>
             <StackPanel Grid.Column="1">
-                <Image  Source="images/pets.png" Name="Folder" Height="410" Width="780"/>
+                <!--<Image  Source="images/pets.png" Name="Folder" Height="410" Width="780"/>-->
+
+                <!--Create Appointment-->
+
+
+                <!--View Appointment-->
                 <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20*" />
+                        <ColumnDefinition Width="80*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Label Content="Select Pet" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="0" Grid.Row="0"/>
+                    <ComboBox x:Name="cbxPets" Margin="10,10,137,13"  Grid.Column="1" Grid.Row="0" SelectionChanged="blxChanged"/>
+                    <TextBlock x:Name="tbxPetDetails"  Grid.Row="2" Grid.ColumnSpan="2" />
+                </Grid>
+
+                <!--View Appointment-->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="25*"/>
+                        <ColumnDefinition Width="750*"/>
+                        <ColumnDefinition Width="21*"/>
+                    </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="20*"/>
                         <RowDefinition Height="80*"/>
                     </Grid.RowDefinitions>
-                    <DataGrid Margin="10" Grid.Row="1" x:Name="Appointments"/>
+                    <DataGrid Margin="10,10,10,10" Grid.Row="1" x:Name="DgAppointments" Grid.ColumnSpan="3"/>
                 </Grid>
-                
+
             </StackPanel>
         </Grid>
     </Grid>
 </Window>
+
+    
+    
