--- a/FinalProject_OOD_2022/Home.xaml
+++ b/FinalProject_OOD_2022/Home.xaml
@@ -26,10 +26,10 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0"  Margin="20 20">
-                <Button Margin="0 10" Height="40" Click="Appointment_Btn">Appointment</Button>
-                <Button Margin="0 10" Height="40">Patient</Button>
-                <Button Margin="0 10" Height="40">Billing</Button>
-                <Button Margin="0 10" Height="40">Full History of the Patient</Button>
+                <Button Margin="0 10" Height="40" Click="Appointment_Btn">New Appointment</Button>
+                <Button Margin="0 10" Height="40">New Patient</Button>
+                <Button Margin="0 10" Height="40">View Bill</Button>
+                <Button Margin="0 10" Height="40">View Patient</Button>
                 <Button Margin="0 10" Height="40"  Click="Button_Click_1">View Appointment</Button>
                 <Button Margin="0 20" Height="29" Width="76" Background="#FFF78F8F"  Click="Button_Click">Exit</Button>
             </StackPanel>
