--- a/FinalProject_OOD_2022/Home.xaml
+++ b/FinalProject_OOD_2022/Home.xaml
@@ -7,7 +7,6 @@
         mc:Ignorable="d"
         Title="Home" Height="506" Width="1016"
         WindowStartupLocation="CenterOwner"
-      
          Background="{DynamicResource MaterialDesignPaper}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
       Loaded="Window_Loaded">
@@ -18,6 +17,10 @@
             <RowDefinition Height="50"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="8*"/>
+        </Grid.ColumnDefinitions>
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -32,33 +35,19 @@
                 <Button Margin="0 10" Height="40"  Click="Button_Click_1">View Appointment</Button>
                 <Button Margin="0 20" Height="29" Width="76" Background="#FFF78F8F"  Click="Button_Click">Exit</Button>
             </StackPanel>
-            <StackPanel Grid.Column="1">
-
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="20*"/>
-                            <RowDefinition Height="50*"/>
-                            <RowDefinition Height="30*"/>
-                         </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <ListBox Grid.Row="1" Grid.Column="0" Margin="10" Name="lbxPatient" 
-                             SelectionChanged="lbxPatient_SectionChanged"/>
-                    <ListBox Grid.Row="1" Grid.Column="1" Margin="10"
-                             Name="lbxBills" SelectionChanged="lbxBills_SelectionChanged"/>
-
-                    <DataGrid Margin="10" 
-                              Height="400" 
-                              Grid.Row="3" Grid.Column="0" x:Name="BillDetails" 
-                              Grid.ColumnSpan="2"/>
-                </Grid>
-
-                <!--</Grid>-->
-
-            </StackPanel>
+        </Grid>
+        <Grid Margin="10" Grid.Column="1" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="9*"/>
+            </Grid.RowDefinitions>
+            <Label Content="Pet Type" Grid.Row="0" Grid.Column="0"/>
+            <ComboBox Name="PetType" Grid.Column="0" Grid.Row="0"/>
+            <ListBox Name="lbxPet" Grid.Row="1" Grid.Column="0"/>
         </Grid>
     </Grid>
 </Window>
