--- a/FinalProject_OOD_2022/Home.xaml
+++ b/FinalProject_OOD_2022/Home.xaml
@@ -11,7 +11,7 @@
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
       Loaded="Window_Loaded">
     <Window.Resources>
-        <DataTemplate x:Key="dataTemplatePet">
+        <!--<DataTemplate x:Key="dataTemplatePet">
             <StackPanel Orientation="Horizontal" Margin="5">
                 <Image Source="{Binding Path=Image}" 
                        Width="175"></Image>
@@ -30,7 +30,7 @@
                                FontSize="12"/>
                 </StackPanel>
             </StackPanel>
-        </DataTemplate>
+        </DataTemplate>-->
         <DataTemplate x:Key="AppointmentInformation">
             <TextBlock>
                 <TextBlock.Text>
@@ -43,7 +43,6 @@
                 </TextBlock.Text>
             </TextBlock>
         </DataTemplate>
-        
     </Window.Resources>
 
     <Grid Margin="10">
@@ -62,15 +61,20 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0"  Margin="20 20">
+                <Button Margin="0 10" Height="40" Click="Btn_Display_Patient">View Patient</Button>
                 <Button Margin="0 10" Height="40" Click="Appointment_Btn">New Appointment</Button>
                 <Button Margin="0 10" Height="40">New Patient</Button>
                 <Button Margin="0 10" Height="40" Click="ViewAllBills">View Bill</Button>
-                <Button Margin="0 10" Height="40" Click="Btn_Display_Patient">View Patient</Button>
                 <Button Margin="0 10" Height="40"  Click="Button_Click_1">View Appointment</Button>
                 <Button Margin="0 20" Height="29" Width="76" Background="#FFF78F8F"  Click="Button_Click">Exit</Button>
             </StackPanel>
         </Grid>
 
+        <!--Default Screen-->
+        <!--<Grid Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3" Grid.Row="1">
+            <Image Name="folder" Source="images/cover.png"></Image>
+        </Grid>-->
+        
         <!--View Patient--> 
         <Grid Margin="10" Grid.Column="1" Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -86,11 +90,23 @@
             <Label Content="Pet Type" Grid.Row="0" Grid.Column="0"/>
             <ComboBox Name="cbxPetType" Grid.Column="0" Grid.Row="0" SelectionChanged="cbxPetType_SelectionChanged" />
             <ListBox Name="lbxPet" Grid.Row="1" Grid.RowSpan="3" Grid.Column="0" SelectionChanged="blxPetChanged" />
-            <ListView x:Name="lblPetDetails" 
+            <!--<ListView x:Name="lblPetDetails" 
                       HorizontalAlignment="Left"
                        Grid.Row="1" 
                        Grid.Column="1" 
-                      ItemTemplate="{StaticResource dataTemplatePet}"/>
+                      ItemTemplate="{StaticResource dataTemplatePet}"/>-->
+
+            <Grid Grid.Column="1" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Image Name="ImgPetImage" Grid.Column="0" Width="200" Height="200" HorizontalAlignment="Left" VerticalAlignment="Top"></Image>
+                <TextBlock 
+                 x:Name="tblkPetDescription" Margin="5"
+                       Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" />
+
+            </Grid>
             <Label Content="Appintment Details" Grid.Row="2" Grid.Column="1"/>
             <ListView x:Name="Tbx_AppointmentDetails" 
                        Grid.Row="3" 
