Change the style; Add Home button; Clean grid when change combobox filtering

--- a/FinalProject_OOD_2022/Home.xaml
+++ b/FinalProject_OOD_2022/Home.xaml
@@ -11,50 +11,41 @@
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
       Loaded="Window_Loaded">
     <Window.Resources>
-        <!--<DataTemplate x:Key="dataTemplatePet">
-            <StackPanel Orientation="Horizontal" Margin="5">
-                <Image Source="{Binding Path=Image}" 
-                       Width="175"></Image>
-                <StackPanel Margin="5">
-                    <TextBlock Text="{Binding Path=Name}" 
-                               Margin="5"
-                               FontSize="12"/>
-                    <TextBlock Text="{Binding Path=PetOwnerLName}" 
-                               Margin="5"
-                               FontSize="12"/>
-                    <TextBlock Text="{Binding Path=DOB}" 
-                               Margin="5"
-                               FontSize="12"/>
-                    <TextBlock Text="{Binding Path=GenderType}" 
-                               Margin="5"
-                               FontSize="12"/>
-                </StackPanel>
-            </StackPanel>
-        </DataTemplate>-->
         <DataTemplate x:Key="AppointmentInformation">
             <TextBlock>
                 <TextBlock.Text>
-                    <MultiBinding StringFormat=" {0}:  {1} {2} {3} ">
+                    <MultiBinding StringFormat=" {0}:  {1} {2} ">
                         <Binding Path = "Appointment_PathWay"/>
                         <Binding Path = "Date"/>
                         <Binding Path = "Time"/>
-                        <Binding Path = "Status"/>
                     </MultiBinding>
                 </TextBlock.Text>
             </TextBlock>
         </DataTemplate>
     </Window.Resources>
+    
+    
 
-    <Grid Margin="10">
+    <Grid Margin="10" ShowGridLines="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
+            
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="8*"/>
         </Grid.ColumnDefinitions>
 
+        <!--Header Style-->
+
+            <Image Source="/images/homelogo.png" 
+                   Grid.Column="0" 
+                   Grid.Row="0"
+                   MouseDown="Image_MouseDown"/>
+   
+
+        
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
@@ -62,60 +53,64 @@
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0"  Margin="20 20">
                 <Button Margin="0 10" Height="40" Click="Btn_Display_Patient">View Patient</Button>
+                <Button Margin="0 10" Height="40" Click="ViewAllBills">Finance</Button>
                 <Button Margin="0 10" Height="40" Click="Appointment_Btn">New Appointment</Button>
                 <Button Margin="0 10" Height="40">New Patient</Button>
-                <Button Margin="0 10" Height="40" Click="ViewAllBills">View Bill</Button>
-                <Button Margin="0 10" Height="40"  Click="Button_Click_1">View Appointment</Button>
                 <Button Margin="0 20" Height="29" Width="76" Background="#FFF78F8F"  Click="Button_Click">Exit</Button>
             </StackPanel>
+            
         </Grid>
 
         <!--Default Screen-->
-        <!--<Grid Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3" Grid.Row="1">
+        <Grid Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3" Grid.Row="1">
             <Image Name="folder" Source="images/cover.png"></Image>
-        </Grid>-->
+        </Grid>
         
-        <!--View Patient--> 
-        <Grid Margin="10" Grid.Column="1" Grid.Row="1">
+        <!--View Patient-->
+        <Grid Margin="10" Grid.Column="1" Grid.Row="1" Name="ViewPatient">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
-                <RowDefinition Height="9*"/>
                 <RowDefinition Height="1*"/>
-                <RowDefinition Height="2*"/>
+                <RowDefinition Height="8*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="3*"/>
             </Grid.RowDefinitions>
-            <Label Content="Pet Type" Grid.Row="0" Grid.Column="0"/>
-            <ComboBox Name="cbxPetType" Grid.Column="0" Grid.Row="0" SelectionChanged="cbxPetType_SelectionChanged" />
-            <ListBox Name="lbxPet" Grid.Row="1" Grid.RowSpan="3" Grid.Column="0" SelectionChanged="blxPetChanged" />
-            <!--<ListView x:Name="lblPetDetails" 
+            <Label Content="Pet Type: " 
+                   Grid.Row="0" 
+                   Grid.Column="0"
+                   Width="100"
+                   HorizontalAlignment="Left"/>
+            <ComboBox Name="cbxPetType" Grid.Row="0" 
+                      Grid.Column="0" 
+                      SelectionChanged="cbxPetType_SelectionChanged"
                       HorizontalAlignment="Left"
-                       Grid.Row="1" 
-                       Grid.Column="1" 
-                      ItemTemplate="{StaticResource dataTemplatePet}"/>-->
-
-            <Grid Grid.Column="1" Grid.Row="1">
+                      Margin="80 0 0 0" Width="250"/>
+            <ListBox Name="lbxPet" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" SelectionChanged="blxPetChanged" />
+            <Grid Grid.Column="1" Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Image Name="ImgPetImage" Grid.Column="0" Width="200" Height="200" HorizontalAlignment="Left" VerticalAlignment="Top"></Image>
+                <Image Name="ImgPetImage" Grid.Row="2" Grid.Column="0" Width="200" Height="200" HorizontalAlignment="Left" VerticalAlignment="Top"></Image>
                 <TextBlock 
-                 x:Name="tblkPetDescription" Margin="5"
-                       Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                       x:Name="tblkPetDescription" 
+                       Margin="5"
+                       Grid.Row="2"
+                       Grid.Column="1" 
+                       HorizontalAlignment="Left" 
+                       VerticalAlignment="Top" />
 
             </Grid>
-            <Label Content="Appintment Details" Grid.Row="2" Grid.Column="1"/>
+            <Label Name="lblAppointmentDetails" Content="Appintment Details" Grid.Row="3" Grid.Column="1"/>
             <ListView x:Name="Tbx_AppointmentDetails" 
-                       Grid.Row="3" 
+                       Grid.Row="4" 
                        Grid.Column="1" 
                       ItemTemplate="{StaticResource AppointmentInformation}"/>
-            
         </Grid>
-        
-        
     </Grid>
 </Window>
 
