--- a/FinalProject_OOD_2022/Home.xaml
+++ b/FinalProject_OOD_2022/Home.xaml
@@ -11,11 +11,29 @@
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
       Loaded="Window_Loaded">
     <Window.Resources>
+        <DataTemplate x:Key="dataTemplatePet">
+            <StackPanel Orientation="Horizontal" Margin="5">
+                <Image Source="{Binding Path=Image}" 
+                       Width="175"></Image>
+                <StackPanel Margin="5">
+                    <TextBlock Text="{Binding Path=Name}" 
+                               Margin="5"
+                               FontSize="12"/>
+                    <TextBlock Text="{Binding Path=DOB}" 
+                               Margin="5"
+                               FontSize="12"/>
+                    <TextBlock Text="{Binding Path=GenderType}" 
+                               Margin="5"
+                               FontSize="12"/>
+                </StackPanel>
+            </StackPanel>
+        </DataTemplate>
+
         <DataTemplate x:Key="AppointmentInformation">
-            <TextBlock>
+            <TextBlock Foreground="{Binding Test}">
                 <TextBlock.Text>
                     <MultiBinding StringFormat=" {0}:  {1} {2} ">
-                        <Binding Path = "Appointment_PathWay"/>
+                        <Binding Path = "Appointment_PathWay" />
                         <Binding Path = "Date"/>
                         <Binding Path = "Time"/>
                     </MultiBinding>
@@ -23,9 +41,6 @@
             </TextBlock>
         </DataTemplate>
     </Window.Resources>
-    
-    
-
     <Grid Margin="10" ShowGridLines="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -44,8 +59,6 @@
                    Grid.Row="0"
                    MouseDown="Image_MouseDown"/>
    
-
-        
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
@@ -54,19 +67,19 @@
             <StackPanel Grid.Column="0"  Margin="20 20">
                 <Button Margin="0 10" Height="40" Click="Btn_Display_Patient">View Patient</Button>
                 <Button Margin="0 10" Height="40" Click="ViewAllBills">Finance</Button>
-                <Button Margin="0 10" Height="40" Click="Appointment_Btn">New Appointment</Button>
+                <Button Margin="0 10" Height="40" >New Appointment</Button>
                 <Button Margin="0 10" Height="40">New Patient</Button>
                 <Button Margin="0 20" Height="29" Width="76" Background="#FFF78F8F"  Click="Button_Click">Exit</Button>
             </StackPanel>
-            
+
         </Grid>
 
-        <!--Default Screen-->
+        <!-- Home Screen -->
         <Grid Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3" Grid.Row="1">
             <Image Name="folder" Source="images/cover.png"></Image>
         </Grid>
         
-        <!--View Patient-->
+        <!-- View Patient -->
         <Grid Margin="10" Grid.Column="1" Grid.Row="1" Name="ViewPatient">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -110,6 +123,49 @@
                        Grid.Row="4" 
                        Grid.Column="1" 
                       ItemTemplate="{StaticResource AppointmentInformation}"/>
+        </Grid>
+   
+   
+        <!--Finance Screen-->
+        <Grid Margin="10" Grid.Column="1" Grid.Row="1" Name="ViewFinance">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="8*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="3*"/>
+            </Grid.RowDefinitions>
+            <Label Content="Search Owner Name: " 
+                   Grid.Row="0" 
+                   Grid.Column="0"
+                   Width="100"
+                   HorizontalAlignment="Left"/>
+
+            <ListBox Name="lbxOwner" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" SelectionChanged="blxOwnerChanged" />
+            <Grid Grid.Column="1" Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock 
+                       x:Name="tblkOwnerDescription" 
+                       Margin="5"
+                       Grid.Row="2"
+                       Grid.Column="1" 
+                       HorizontalAlignment="Left" 
+                       VerticalAlignment="Top" />
+                
+                <!--Create Data template -->
+                <ListView x:Name="lblPetDetails" 
+                      HorizontalAlignment="Left"
+                       Grid.Row="1" 
+                       Grid.Column="1" 
+                      ItemTemplate="{StaticResource dataTemplatePet}"/>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
