--- a/FinalProject_OOD_2022/Home.xaml
+++ b/FinalProject_OOD_2022/Home.xaml
@@ -28,8 +28,15 @@
             </StackPanel>
         </DataTemplate>
 
+        <DataTemplate x:Key="ownerBillList">
+            <StackPanel Orientation="Horizontal" Margin="5">
+                <StackPanel Margin="5">
+                    <TextBlock Text="{Binding Path=Name}"/>
+                </StackPanel>
+            </StackPanel>
+        </DataTemplate>
         <DataTemplate x:Key="AppointmentInformation">
-            <TextBlock Foreground="{Binding Test}">
+            <TextBlock>
                 <TextBlock.Text>
                     <MultiBinding StringFormat=" {0}:  {1} {2} ">
                         <Binding Path = "Appointment_PathWay" />
@@ -74,9 +81,9 @@
         </Grid>
 
         <!--Home Screen-->
-        <!--<Grid Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3" Grid.Row="1">
+        <Grid Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3" Grid.Row="1">
             <Image Name="folder" Source="images/cover.png"></Image>
-        </Grid>-->
+        </Grid>
 
         <!--View Patient-->
         <Grid Margin="10" Grid.Column="1" Grid.Row="1" Name="ViewPatient">
@@ -123,7 +130,7 @@
             <ListView x:Name="Tbx_AppointmentDetails" 
                        Grid.Row="4" 
                        Grid.Column="1" 
-                      ItemTemplate="{StaticResource AppointmentInformation}"/>
+                       ItemTemplate="{StaticResource AppointmentInformation}"/>
         </Grid>
 
 
@@ -147,26 +154,32 @@
                    Width="100"
                    HorizontalAlignment="Left"/>-->
             <!--<ListBox Name="lbxOwner" Grid.Row="2" Grid.RowSpan="3" Grid.Column="0" SelectionChanged="blxOwnerChanged" />-->
-            <ComboBox Name="cbxOwnerOrPet"  
+            <!--<ComboBox Name="cbxOwnerOrPet"  
                       materialDesign:HintAssist.Hint="Owner" 
                       HorizontalAlignment="Left"
                       Width="300"
-                      Height="35"/>
+                      Height="35"/>-->
             <ComboBox Name="cbxFinanceSituation"  
                       Grid.Column="1"
                       Grid.Row="0"
                       Height="35"
                       Width="300"
-                      materialDesign:HintAssist.Hint="All"/>
+                      materialDesign:HintAssist.Hint="All"
+                     SelectionChanged="PaymentStatus_Changed"/>
 
-            <ListView  Name="lbxOwner"
+            <ListView 
+                       ItemTemplate="{StaticResource ownerBillList}"
+                       Name="lbxOwner"
                        Grid.Row="2" 
                        Grid.Column="0"                        
                        Grid.ColumnSpan="2" 
-                       SelectionChanged="blxOwnerChanged" Margin="0,10,0,10"/>
+                       SelectionChanged="blxOwnerChanged" 
+                       Margin="0,10,0,10"/>
+
             <Button Content="More details" Grid.Row="3" 
                     HorizontalAlignment="Center"
-                    Grid.ColumnSpan="2"/>
+                    Grid.ColumnSpan="2"
+                    Click="btnMoreDetailsBill"/>
             <!--<Grid Grid.Column="1" Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -190,7 +203,7 @@
         </Grid>
 
         <!--New Patient -->
-        <!--<Grid Margin="10" Grid.Column="1" Grid.Row="1" Name="CreatePatient">
+        <!--<Grid Margin="10" Grid.Column="1" Grid.Row="1" Name="CreatePatient2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="4*"/>
@@ -204,6 +217,104 @@
             <Button Content="Save" VerticalAlignment="Center" Click="btn_SaveOwner"/>
         </Grid>-->
 
+        <Grid Margin="10" 
+              Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Name="CreatePatient">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            
+            <TextBox
+                HorizontalAlignment="Left"  
+                Height="35"    
+                Width="200"
+                Grid.Column="0"
+                  x:Name="Name"
+                  materialDesign:HintAssist.Hint="Name"
+                  materialDesign:HintAssist.HelperText="Helper text longer than error">
+                <TextBox.Text>
+                    <Binding
+                     Path="Name"
+                     UpdateSourceTrigger="PropertyChanged">
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+            <TextBox
+                 Grid.Column="1"
+                  x:Name="Surname"
+                  materialDesign:HintAssist.Hint="Surname"
+                  materialDesign:HintAssist.HelperText="Helper text longer than error">
+                <TextBox.Text>
+                    <Binding
+                    Path="Surname"
+                    UpdateSourceTrigger="PropertyChanged">
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+
+            <DatePicker Grid.Column="2"
+  Width="100"
+  materialDesign:HintAssist.Hint="Custom">
+                <DatePicker.Resources>
+                    <Style
+      x:Key="CustomCalendarDayButton"
+      TargetType="CalendarDayButton"
+      BasedOn="{StaticResource MaterialDesignCalendarDayButton}">
+                        <Setter
+        Property="materialDesign:CalendarAssist.SelectionColor"
+        Value="#B2F39B" />
+                        <Setter
+        Property="materialDesign:CalendarAssist.SelectionForegroundColor"
+        Value="Black" />
+                    </Style>
+                    <Style
+      x:Key="CustomCalendarButton"
+      TargetType="CalendarButton"
+      BasedOn="{StaticResource MaterialDesignCalendarButton}">
+                        <Setter
+        Property="materialDesign:CalendarAssist.SelectionColor"
+        Value="#B2F39B" />
+                        <Setter
+        Property="materialDesign:CalendarAssist.SelectionForegroundColor"
+        Value="Black" />
+                    </Style>
+                    <Style
+      x:Key="CustomCalendar"
+      TargetType="{x:Type Calendar}"
+      BasedOn="{StaticResource MaterialDesignDatePickerCalendarPortrait}">
+                        <Setter
+        Property="Background"
+        Value="#343C3F" />
+                        <Setter
+        Property="Foreground"
+        Value="White" />
+                        <Setter
+        Property="materialDesign:CalendarAssist.HeaderBackground"
+        Value="#A2E9FF" />
+                        <Setter
+        Property="materialDesign:CalendarAssist.HeaderForeground"
+        Value="Black" />
+                        <Setter
+        Property="CalendarDayButtonStyle"
+        Value="{StaticResource CustomCalendarDayButton}" />
+                        <Setter
+        Property="CalendarButtonStyle"
+        Value="{StaticResource CustomCalendarButton}" />
+                    </Style>
+                    <Style
+      TargetType="DatePicker"
+      BasedOn="{StaticResource MaterialDesignFloatingHintDatePicker}">
+                        <Setter
+        Property="CalendarStyle"
+        Value="{StaticResource CustomCalendar}" />
+                    </Style>
+                </DatePicker.Resources>
+            </DatePicker>
+            
+
+        </Grid>
     </Grid>
 </Window>
 
