--- a/FinalProject_OOD_2022/Home.xaml
+++ b/FinalProject_OOD_2022/Home.xaml
@@ -64,7 +64,6 @@
                    Grid.Column="0" 
                    Grid.Row="0"
                    MouseDown="Image_MouseDown"/>
-
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
@@ -168,48 +167,29 @@
                     Grid.ColumnSpan="2"
                     Click="btnMoreDetailsBill"/>
         </Grid>
-
-
         <Grid Margin="10" 
               Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Name="CreatePatient">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="30*"/>
+                <ColumnDefinition Width="30*"/>
+                <ColumnDefinition Width="30*"/>
+                <ColumnDefinition Width="0*"/>
             </Grid.ColumnDefinitions>
+            <TextBox  Grid.Column="0"   Width="250"
+  materialDesign:HintAssist.Hint="Name"
+  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+  VerticalAlignment="Center" />
             
-            <TextBox
-                HorizontalAlignment="Left"  
-                Height="35"    
-                Width="200"
-                Grid.Column="0"
-                  x:Name="Name"
-                  materialDesign:HintAssist.Hint="Name"
-                  materialDesign:HintAssist.HelperText="Helper text longer than error">
-                <TextBox.Text>
-                    <Binding
-                     Path="Name"
-                     UpdateSourceTrigger="PropertyChanged">
-                    </Binding>
-                </TextBox.Text>
-            </TextBox>
-            <TextBox
-                 Grid.Column="1"
-                  x:Name="Surname"
-                  materialDesign:HintAssist.Hint="Surname"
-                  materialDesign:HintAssist.HelperText="Helper text longer than error">
-                <TextBox.Text>
-                    <Binding
-                    Path="Surname"
-                    UpdateSourceTrigger="PropertyChanged">
-                    </Binding>
-                </TextBox.Text>
-            </TextBox>
+            <TextBox  Grid.Column="1"   Width="250"
+  materialDesign:HintAssist.Hint="Surname"
+  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+  VerticalAlignment="Center" />
+            
 
             <DatePicker Grid.Column="2"
-  Width="100"
-  materialDesign:HintAssist.Hint="Custom">
+                             Width="250"
+ 
+  materialDesign:HintAssist.Hint="DOB">
                 <DatePicker.Resources>
                     <Style
       x:Key="CustomCalendarDayButton"
@@ -265,8 +245,7 @@
                     </Style>
                 </DatePicker.Resources>
             </DatePicker>
-            
-
+           
         </Grid>
     </Grid>
 </Window>
